--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   lottie: ^3.1.2
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
