--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   introduction_screen: ^3.1.14
-  shared_preferences: ^2.3.1
+  shared_preferences: ^2.3.2
   provider: ^6.1.2
   lottie: ^3.1.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.7.0
+  flutter_facebook_auth: ^7.0.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
