--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flutter_facebook_auth: ^7.0.1
   google_sign_in: ^6.2.1
+  image_gallery_saver: ^2.0.3
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.4
+  flutter_file_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
